style.css
html {
   background-color: #21242b;
}

body {
    background-color: #282c34;
    color: #bbc2cf;
    font-family: 'Fira Mono';
    width: 60em;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    border-radius: 25px;
    border: solid #bbc2cf;
}

h1 {
   color: #e7e7e7;
   text-shadow: 5px 5px 1px #21242b;
}

h2 {
   color: #c678dd;
   text-shadow: 4px 4px 1px #21242b;
}

h3 {
   color: #2c97f4;
   text-shadow: 3px 3px 1px #21242b;
}

a {
   color: #2c97f4;
}

ul {
    text-align: center;
    list-style-position: inside;
}

